--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "sonar": "node ./src/Core/sonar.ts"
   },
   "dependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "react": "^18.0.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-ga4": "^1.4.1",
     "sass": "^1.50.1",
-    "sonarqube-scanner": "^3.1.0",
-    "@originjs/vite-plugin-commonjs": "^1.0.3"
+    "sonarqube-scanner": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
     "@rollup/plugin-inject": "^4.0.4",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "15.0.6",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
